--- a/tests/unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit.csproj
+++ b/tests/unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit.csproj
@@ -14,11 +14,11 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.10" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="10.0.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
 			<PrivateAssets>all</PrivateAssets>
@@ -46,6 +46,36 @@
 
 	<ItemGroup>
 	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+	  <PackageReference Include="Microsoft.CodeCoverage" Version="18.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Primitives" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="18.0.1" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+	  <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.1" />
+	  <PackageReference Include="xunit.analyzers" Version="1.26.0">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+	  <PackageReference Include="Microsoft.CodeCoverage" Version="18.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Primitives" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="18.0.1" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+	  <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.1" />
+	  <PackageReference Include="xunit.analyzers" Version="1.26.0">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
